--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-image: url("/minamorl.jpg");
+  background-repeat: no-repeat;
+  background-size: 70%;
+  background-position: calc(100% - 20px) 20%;
 }
