--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 0, 0, 0;
@@ -15,13 +14,43 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  background-color: black;
+  overflow: hidden;
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
   background-image: url("/minamorl.jpg");
   background-repeat: no-repeat;
-  background-size: 90%;
-  background-position: 100% 20%;
+  background-size: cover;
+  transform: scale(1);
+  transition: transform 0.2s ease-in-out;
+  animation: mosh 5s infinite;
 }
-@media (max-width: 767px) {
-  body {
-    background-size: cover;
+
+@keyframes mosh {
+  0% {
+    transform: scale(1) translate(0, 0) rotate(0);
   }
+  25% {
+    transform: scale(1.05) translate(-5px, -5px) rotate(-2deg);
+  }
+  50% {
+    transform: scale(0.95) translate(5px, 5px) rotate(2deg);
+  }
+  75% {
+    transform: scale(1.02) translate(-3px, -3px) rotate(1deg);
+  }
+  100% {
+    transform: scale(1) translate(0, 0) rotate(0);
+  }
+}
+
+.background-image:hover {
+  transform: scale(1.1);
 }
